--- a/authService/Dockerfile
+++ b/authService/Dockerfile
@@ -1,14 +1,20 @@
 FROM golang:alpine AS builder
-
+#прикол в том, что я просто сбилдил бинарь, его нужно еще запустить!
 WORKDIR /app
 
-COPY auth .
+COPY go.mod ./
+COPY go.sum ./
+RUN go mod download
 
-RUN go build -o auth main.go
+COPY . ./
+
+RUN go build -o main app/cmd/main/main.go
 
 FROM alpine
 
 WORKDIR /app
 
-COPY --from=builder /app/auth /app/auth
+COPY --from=builder /app/main .
+
+EXPOSE 9000
 
