--- a/messageSenderService/Dockerfile
+++ b/messageSenderService/Dockerfile
@@ -1,12 +1,8 @@
-FROM golang:alpine AS builder
+FROM golang:1.19.3-alpine AS builder
 
 WORKDIR /app
 
-COPY go.mod ./
-COPY go.sum ./
-RUN go mod download
-
-COPY . ./
+COPY . .
 
 RUN go build -o main app/cmd/main/main.go
 
@@ -14,6 +10,10 @@ FROM alpine
 
 WORKDIR /app
 
+
 COPY --from=builder /app/main .
 
 EXPOSE 9001
+
+CMD ["/app/main"]
+
