--- a/messageSenderService/Dockerfile
+++ b/messageSenderService/Dockerfile
@@ -2,7 +2,10 @@ FROM golang:1.19.3-alpine AS builder
 
 WORKDIR /app
 
-COPY . .
+COPY go.mod ./
+COPY go.sum ./
+RUN go mod download
+COPY . ./
 
 RUN go build -o main app/cmd/main/main.go
 
@@ -10,10 +13,9 @@ FROM alpine
 
 WORKDIR /app
 
+COPY --from=builder /app .
 
-COPY --from=builder /app/main .
-
-EXPOSE 9001
+EXPOSE 9002
 
 CMD ["/app/main"]
 
