--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       astronet:
         aliases:
           - gateway
+    network_mode: host
   messages:
     container_name: messagesSenderService
     build: ./messageSenderService
@@ -23,6 +24,7 @@ services:
       astronet:
         aliases:
           - messages
+    network_mode: host
   astro:
     container_name: astrologyService
     build: ./astroService
@@ -33,6 +35,7 @@ services:
       astronet:
         aliases:
           - astro
+    network_mode: host
   auth:
     container_name: authAstroService
     build: ./authService
@@ -45,6 +48,7 @@ services:
       astronet:
         aliases:
           - auth
+    network_mode: host
   postgres:
     image: postgres
     environment:
@@ -59,6 +63,7 @@ services:
       astronet:
         aliases:
           - postgres
+    network_mode: host
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -q -U postgres || exit 1"]
       interval: 5s
@@ -70,4 +75,3 @@ volumes:
   postgres_data:
 networks:
   astronet:
-    driver: bridge
